--- a/medApp/package.json
+++ b/medApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "4.15.2",
     "holla": "^0.6.3",
+    "moment": "^2.18.1",
     "opentok": "^2.5.0",
     "socket.io": "1.7.3"
   }
